# haskell-wlc

./: README.md  wlc.cabal
src/Graphics/Wayland/: WLC.hs
src/Graphics/Wayland/WLC/: Callbacks.hs  Core.hs  Geometry.hsc  Input.hs  Output.hs  Types.hs  View.hs
src/Graphics/Wayland/WLC/Callbacks/: TH.hs
src/Graphics/Wayland/WLC/Internal/: TH.hs
src/Graphics/Wayland/WLC/Types/: Internal.hsc
